--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.26"
+    "@sveltejs/adapter-static": "^1.0.0-next.26",
+    "dotenv": "^16.0.0"
   }
 }
